# proceso-lasso

./: .gitignore  Cargo.toml  Dioxus.toml  config.yaml  package-lock.json  package.json
app-dioxus/: Cargo.toml  Dioxus.toml  input.css  package.json
app-dioxus/src/: app.rs  main.rs
app-dioxus/src/components/: button.rs
app-slint/: Cargo.toml
app-slint/src/: main.rs
app-slint/ui/: appwindow.slint  table.slint
lib-core/: Cargo.toml
lib-core/src/: lib.rs  preset.rs
lib-core/src/process/: list.rs  manager.rs  mod.rs
lib-core/src/rule/: rule.rs  rulematch.rs
lib-system/: Cargo.toml
lib-system/src/: lib.rs
lib-system/src/config_store/: memory.rs  mod.rs  yaml.rs
lib-windows/: Cargo.toml
lib-windows/src/: lib.rs  macros.rs
lib-windows/src/process/: affinity.rs  list.rs  manager.rs  mod.rs  process.rs
public/: tailwind.css
scripts/: dev.bat
src/: locals.rs  main.rs
src/components/: button.rs  mod.rs  process_list.rs
src/components/process/: list.rs  overview.rs
src/config/: affinity_mask.rs  lasso.rs  mod.rs
src/config/manager/: memory.rs  mod.rs  yaml.rs
src/lasso/: affinity_mask.rs  config.rs  matcher.rs  mod.rs  preset.rs  rule.rs
src/lasso/config/: manager.rs  mod.rs
src/lasso/process/: affinity_mask.rs  list.rs  manager.rs  mod.rs
src/lasso/rule/: matcher.rs  mod.rs
src/process/: mod.rs
src/providers/: mod.rs  windows_process.rs
src/structs/: config.rs  mod.rs  process.rs
src/system/: mod.rs
src/traits/: config_manager.rs  mod.rs  process_manager.rs  process_provider.rs
src/ui/: app.rs  mod.rs
(+27 files in other folders)
