[package]
name = "lib-windows"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
serde = "1.0"
lib-core = { path = "../lib-core" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.54.0", features = ["Win32_System_Threading", "Win32_Foundation"] }
wmi = "0.13"